--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
 			<div class="container">
 				<div class="col-md-6">
 					<div id="footer-copyright">
-						<p>Copyright &copy; 2017 All Right Reserved by Vesco Inc.</p>
+						<p>Copyright &copy; 2017 All Right Reserved by @Ajaygorana.</p>
 					</div>
 				</div>
 				<div class="col-md-6 hidden-sm hidden-xs">
